# capstone-multi-agent-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  RELEASE_REPORT.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: Home.py  __init__.py
app/assets/: styles.css  theme.toml
app/components/: cards.py  charts.py  metrics.py  notifications.py  sidebar.py  tables.py  upload.py  workflow_status.py
app/pages/: 1_Upload.py  2_Data_Profile.py  3_Feature_Engineering.py  4_Model_Training.py  5_Visualizations.py  6_Business_Insights.py  7_Reports.py  8_History.py
app/services/: __init__.py  config.py  history_service.py  session.py  workflow_service.py
assets/screenshots/: .gitkeep
benchmarks/: benchmark_report.py  metrics.json  run_benchmarks.py
docs/: api_reference.md  architecture.md  deployment.md  developer_guide.md  faq.md  installation.md  performance.md  troubleshooting.md  user_guide.md  workflow.md
logs/: .gitkeep
portfolio/: interview_questions.md  project_summary.md  resume_description.md  technical_highlights.md
reports/: release_validation.md
scripts/: clear_workspace.py  demo_phase10.py  demo_phase11.py  demo_phase12.py  demo_phase3.py  demo_phase4.py  demo_phase5.py  demo_phase6.py  demo_phase7.py  demo_phase8.py  demo_phase9.py
src/agents/business_insights/: __init__.py  agent.py  business_recommendations.py  confidence.py  data_quality.py  executive_summary.py  model_analysis.py  models.py  risk_analysis.py
src/agents/data_intelligence/: __init__.py  agent.py  cleaner.py  models.py  profiler.py  validator.py
src/agents/feature_engineering/: __init__.py  agent.py  config.py  detector.py  encoder.py  generator.py  models.py  pipeline.py  scaler.py  selector.py  splitter.py  validators.py
src/agents/machine_learning/: __init__.py  agent.py  config.py  cross_validator.py  evaluator.py  explainer.py  model_factory.py  models.py  persistence.py  ranking.py  task_detector.py  trainer.py  tuner.py
src/agents/report_generation/: __init__.py  agent.py  asset_manager.py  citation_manager.py  config.py  context_builder.py  exporter.py  manifest.py  models.py  section_builder.py  template_engine.py  validator.py
src/agents/visualization/: __init__.py  agent.py  caption_generator.py  config.py  dashboard_visualizer.py  dataset_visualizer.py  exporter.py  figure_factory.py  model_visualizer.py  models.py  themes.py
src/core/: __init__.py  constants.py  environment.py  exceptions.py  logger.py  paths.py  security.py  settings.py
src/core/llm/: __init__.py  cache.py  client.py  config.py  cost_tracker.py  parser.py  prompts.py  provider.py  retry.py  tokenizer.py
src/database/: __init__.py  base.py  database.py  models.py  session.py
src/memory/: __init__.py  memory_store.py
src/optimization/: __init__.py  benchmark.py  cache.py  config.py  lazy_loader.py  memory.py  parallel.py  profiler.py
src/orchestration/: __init__.py  checkpoint.py  config.py  error_handler.py  events.py  graph.py  nodes.py  parallel.py  router.py  state.py
src/repositories/: __init__.py  dataset_repository.py  log_repository.py
src/schemas/: __init__.py  agent.py  dataset.py  metadata.py  ml.py  report.py
src/services/: __init__.py  dataset_service.py  file_service.py  metadata_service.py
src/tools/: __init__.py  data_loader.py  dataset_profiler.py  file_manager.py
src/utils/: __init__.py  dataframe.py  file_utils.py  serialization.py  validators.py
tests/: test_benchmarks.py  test_business_insights.py  test_cache.py  test_caption_generator.py  test_checkpoint.py  test_cleaner.py  test_components.py  test_context_builder.py  test_cross_validator.py  test_dashboard.py  test_data_intelligence.py  test_database.py  test_dataset_visualizer.py  test_detector.py  test_encoder.py  test_evaluator.py  test_exporter.py  test_feature_engineering.py  test_generator.py  test_graph.py  test_llm_client.py  test_machine_learning.py  test_memory.py  test_model_factory.py  test_model_visualizer.py  test_optimization.py  test_parallel.py  test_parser.py  test_persistence.py  test_pipeline.py  test_profiler.py  test_prompt_builder.py  test_ranking.py  test_report_generation.py  test_router.py  test_scaler.py  test_section_builder.py  test_selector.py  test_services.py  test_small_dataset.py  (+9 more)
tests/integration/: __init__.py  test_classification.py  test_database.py  test_end_to_end.py  test_multiclass.py  test_real_datasets.py  test_regression.py  test_reports.py  test_streamlit.py  test_visualizations.py  test_workflow_resume.py
tests/performance/: __init__.py  test_cache_performance.py  test_large_dataset.py  test_memory_usage.py  test_parallel_execution.py
workspace/: data.db
workspace/artifacts/html/: correlation_heatmap.html  distribution_age.html  missing_heatmap.html
workspace/artifacts/leaderboards/: leaderboard.json
workspace/artifacts/metadata/: visualization_report.json
workspace/artifacts/metrics/: feature_importance.csv  metadata.json  metrics.json
workspace/artifacts/models/: best_model_logistic_regression.joblib
workspace/artifacts/reports/: report_manifest.json
workspace/artifacts/reports/docx/: report.docx
workspace/artifacts/reports/html/: report.html
workspace/artifacts/reports/markdown/: report.md
