[project]
name = "capstone-multi-agent-analyst"
version = "0.1.0"
description = "A production-ready Multi-Agent AI Data Analyst framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Principal Software Engineer & AI Architect", email = "architect@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
    "RUFF", # Ruff-specific rules
]
ignore = [
    "D100", # Missing docstring in public module (we can enforce locally as needed)
    "D104", # Missing docstring in public package
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src", "app"]

[tool.mypy]
mypy_path = "."
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "matplotlib.*",
    "plotly.*",
    "seaborn.*",
    "sqlalchemy.*",
    "weasyprint.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "joblib.*",
    "shap.*",
    "lime.*",
    "faiss.*",
    "chromadb.*",
    "crewai.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pyright]
extraPaths = ["."]
