[project]
name = "capstone-multi-agent-analyst"
version = "1.0.0"
description = "A production-ready Multi-Agent AI Data Analyst framework."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Principal Software Engineer & AI Architect", email = "architect@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501", # Line too long (formatting handled by Black)
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"app/*" = ["N999", "E402"]
"tests/*" = ["ARG001", "ARG002", "ARG004", "E402", "N806", "N803", "F841"]
"src/agents/machine_learning/*" = ["N803", "N806"]
"src/agents/feature_engineering/*" = ["N803", "N806"]
"src/agents/visualization/*" = ["N803", "N806", "ARG002"]
"src/agents/business_insights/*" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["src", "app"]

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
python_version = "3.12"
warn_unused_configs = false
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "matplotlib.*",
    "plotly.*",
    "seaborn.*",
    "sqlalchemy.*",
    "weasyprint.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "joblib.*",
    "shap.*",
    "lime.*",
    "faiss.*",
    "chromadb.*",
    "crewai.*",
    "langchain.*",
    "langchain_core.*",
    "langgraph.*",
    "streamlit.*",
    "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.orchestration.graph",
    "src.repositories.*",
    "src.agents.*",
    "app.components.*",
]
ignore_errors = true

[tool.pyright]
extraPaths = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
